service worker: Simplify WorkerFetchContext's controller state.

It was using two data members to determine if there was a controller.
It only needs one.

Minor cleanup for the linked bug.

Bug: 850839
Change-Id: I1d816453047721d79503d47defc8f8cb3e25c7d9
Reviewed-on: https://chromium-review.googlesource.com/1103981
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Tsuyoshi Horo <horo@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567976}
Former-commit-id: 44a78b2cf6ab98720cf83822758870a53588b557